# diffhtwo

./: .coveragerc  .gitignore  LICENSE.rst  README.rst  pyproject.toml  requirements.txt
.github/workflows/: cron_tests.yaml  gd_bugfix_rapid_q.yaml  gd_bugfix_test.yaml  linting.yaml  linting.yml  monthly-warning-test.yaml  tests.yaml  tests.yml
diffhtwo/: dev_pop_kernels.py  jax_powerlaw.py  kauffmann_curve.py  line_luminosity_kernels.py  line_photometry_kernels.py  load_cloudy_grid.py  load_mpa_jhu.py  pred_line_photometry.py
diffhtwo/experimental/: Np_specphot.py  bimodal_sfh_opt.py  conftest.py  defaults.py  diffndhist.py  diffstarpop_halpha.py  diffstarpop_halpha_opt.py  emline_luminosity.py  emline_luminosity_pop.py  emline_uils.py  halpha_luminosity.py  halpha_luminosity2.py  lc_utils.py  lightcone_generators.py  line_phot_kern.py  n_mag.py  n_mag_opt.py  n_mag_opt_1d.py  n_specphot.py  nd_mag.py  nd_mag_kern.py  nd_mag_opt.py  param_utils.py  pop_sfh.py  precompute_emission_line_luminosity_kern.py  precompute_line_luminosity_kern.py  (+2 more)
scripts/: config.yaml  config_diagnostics.yaml  config_diffsky.yaml  config_feniks.yaml  config_feniks_hizels.yaml  config_feniks_lh.yaml  config_sdss.yaml  config_sdss_feniks.py  config_sdss_feniks.yaml  config_sdss_feniks_hizels.yaml  config_sdss_hizels.yaml  config_sdss_lh.yaml  fit_diffsky.py  fit_feniks.py  fit_feniks_hizels.py  fit_feniks_lh.py  fit_sdss.py  fit_sdss_feniks.py  fit_sdss_feniks_hizels.py  fit_sdss_hizels.py  fit_sdss_lh.py  fits_sdss_feniks.py  generate_diagnostic_plots.py  tabulate_qh_averaged_htwo_table.py
(+129 files in other folders)
